[package]
name = "eigenda_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
base64 = "0.13"
tokio = { version = "1.34.0", features = ["full"] }
ritelinked = "0.3.2"
serde = { version = "1.0.192", features=["derive"] }
serde_json = "1.0.108"
